[gd_scene format=3 uid="uid://bck1kpbmbaj8n"]

[ext_resource type="ArrayMesh" uid="uid://dewspllqh8or3" path="res://assets/models/C1A0.res" id="1_uxeic"]
[ext_resource type="Shape3D" uid="uid://d1w5p7fpv5t5t" path="res://assets/models/C1A0_collision.res" id="2_5jp1s"]
[ext_resource type="Script" uid="uid://cwfle0lloje08" path="res://entities/LoadLevel.gd" id="3_s03oy"]
[ext_resource type="Texture2D" uid="uid://bb0e64vof5t2o" path="res://assets/sprites/dbg_portal.png" id="4_7fnmf"]
[ext_resource type="Script" uid="uid://dssbc5hbjreg6" path="res://entities/Spawn.gd" id="5_jgvh2"]
[ext_resource type="PackedScene" uid="uid://bj7hpyycap38w" path="res://prefabs/door.tscn" id="6_pe3st"]
[ext_resource type="ArrayMesh" uid="uid://b8yrqphxm3xcn" path="res://assets/models/hl1_c1a0_transition_C0A0E_003.res" id="7_7fnmf"]
[ext_resource type="Script" uid="uid://8vx54lrm46k4" path="res://entities/timer_player.gd" id="7_jgvh2"]
[ext_resource type="Shape3D" uid="uid://esn36byd2ed" path="res://assets/models/C1A0_Transition_collision.res" id="8_jgvh2"]
[ext_resource type="PackedScene" uid="uid://df2amvnuqjmfl" path="res://prefabs/c1a0_door_large.tscn" id="9_pe3st"]
[ext_resource type="PackedScene" uid="uid://cxkmecccsn0bg" path="res://prefabs/mario_64/goomba.tscn" id="11_pe3st"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7jbgc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gr3wi"]
size = Vector3(10, 1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_r26ln"]
size = Vector3(1000, 8, 1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_pe3st"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_t7t8s"]
size = Vector3(1, 3.5, 5)

[node name="Node3D" type="Node3D" unique_id=2064185158]

[node name="C1A0" type="Node3D" parent="." unique_id=567256315]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.270777, -5.3833103, 10.190255)

[node name="World" type="StaticBody3D" parent="C1A0" unique_id=1136197537]

[node name="C1a0" type="MeshInstance3D" parent="C1A0/World" unique_id=1286991568]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, -2.468, 4.779, 4.218)
visibility_range_end = 4096.0
mesh = ExtResource("1_uxeic")

[node name="CollisionShape3D" type="CollisionShape3D" parent="C1A0/World" unique_id=489768748]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, -2.468182, 4.7789288, 4.2177286)
shape = ExtResource("2_5jp1s")

[node name="GridMapTest Teleport Trigger" type="Area3D" parent="C1A0" unique_id=988615940]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.612649, 3.0487177, -3.5050173)
script = ExtResource("3_s03oy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="C1A0/GridMapTest Teleport Trigger" unique_id=1464180989]
shape = SubResource("BoxShape3D_7jbgc")

[node name="Sprite3D" type="Sprite3D" parent="C1A0/GridMapTest Teleport Trigger" unique_id=1153518091]
pixel_size = 0.02
billboard = 1
alpha_scissor_threshold = 0.484
texture = ExtResource("4_7fnmf")

[node name="Lights" type="Node3D" parent="C1A0" unique_id=179350413]

[node name="OmniLight3D" type="OmniLight3D" parent="C1A0/Lights" unique_id=302776198]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2640686, 5.55455, -21.907555)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D2" type="OmniLight3D" parent="C1A0/Lights" unique_id=86125498]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5469742, 5.55455, -21.907555)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D3" type="OmniLight3D" parent="C1A0/Lights" unique_id=2039984475]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.286182, 5.55455, -21.907555)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D4" type="OmniLight3D" parent="C1A0/Lights" unique_id=557360066]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.886654, 5.55455, -21.907555)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D5" type="OmniLight3D" parent="C1A0/Lights" unique_id=663451200]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.723068, 5.55455, -21.907555)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D6" type="OmniLight3D" parent="C1A0/Lights" unique_id=1529615271]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5553322, 4.829445, -9.408257)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D7" type="OmniLight3D" parent="C1A0/Lights" unique_id=1009405068]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5759087, 4.6708603, -6.706009)
light_energy = 2.5
light_size = 0.213
omni_range = 8.0

[node name="OmniLight3D8" type="OmniLight3D" parent="C1A0/Lights" unique_id=1030522514]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5759087, 4.6708603, -12.639946)
light_energy = 2.5
light_size = 0.213
omni_range = 8.0

[node name="OmniLight3D9" type="OmniLight3D" parent="C1A0/Lights" unique_id=1419058930]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.723068, 7.6166763, -13.657845)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D10" type="OmniLight3D" parent="C1A0/Lights" unique_id=787509889]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.723068, 7.6166763, -10.870659)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D11" type="OmniLight3D" parent="C1A0/Lights" unique_id=949285797]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.723068, 7.6166763, -8.143349)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D12" type="OmniLight3D" parent="C1A0/Lights" unique_id=1623258764]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.723068, 7.6166763, -2.435051)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D13" type="OmniLight3D" parent="C1A0/Lights" unique_id=41972673]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.723068, 7.6166763, 0.36824036)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D14" type="OmniLight3D" parent="C1A0/Lights" unique_id=558767454]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.2486725, 7.2365723, 2.9197235)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D15" type="OmniLight3D" parent="C1A0/Lights" unique_id=650053022]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.2031784, 7.2365723, 2.9197235)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D16" type="OmniLight3D" parent="C1A0/Lights" unique_id=745022202]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.2486725, 7.2365723, 10.485321)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D17" type="OmniLight3D" parent="C1A0/Lights" unique_id=1307788600]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.2031784, 7.2365723, 10.485321)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D18" type="OmniLight3D" parent="C1A0/Lights" unique_id=1940050448]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.2486725, 7.2365723, 18.018524)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D19" type="OmniLight3D" parent="C1A0/Lights" unique_id=131339037]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.2031784, 7.2365723, 18.018524)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D20" type="OmniLight3D" parent="C1A0/Lights" unique_id=88141427]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.844494, 6.362854, 16.993805)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D21" type="OmniLight3D" parent="C1A0/Lights" unique_id=1337902951]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.844494, 6.362854, 11.849701)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D22" type="OmniLight3D" parent="C1A0/Lights" unique_id=313603346]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.895977, 6.362854, 16.993805)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D23" type="OmniLight3D" parent="C1A0/Lights" unique_id=933766346]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.895977, 6.362854, 11.849701)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D24" type="OmniLight3D" parent="C1A0/Lights" unique_id=630245059]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.372986, 6.6748047, -12.973915)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D25" type="OmniLight3D" parent="C1A0/Lights" unique_id=503427177]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.372986, 6.6748047, -6.4076614)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D26" type="OmniLight3D" parent="C1A0/Lights" unique_id=1616604521]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6729736, 6.6748047, -12.973915)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D27" type="OmniLight3D" parent="C1A0/Lights" unique_id=819171431]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.6729736, 6.6748047, -6.4076614)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D28" type="OmniLight3D" parent="C1A0/Lights" unique_id=1488042681]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.13485718, 6.2459793, 4.0041046)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OmniLight3D29" type="OmniLight3D" parent="C1A0/Lights" unique_id=470192713]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.13485909, 6.2459793, 8.730637)
light_energy = 2.5
light_size = 0.213
omni_range = 7.0

[node name="OOB Trigger" type="Area3D" parent="C1A0" unique_id=345808396]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.264427, 0, -10.622203)

[node name="CollisionShape3D" type="CollisionShape3D" parent="C1A0/OOB Trigger" unique_id=467305385]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3232689, -0.8768978, 1.0833354)
shape = SubResource("BoxShape3D_gr3wi")

[node name="Door" parent="C1A0" unique_id=1588603263 instance=ExtResource("6_pe3st")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.8468342, 4.1663184, 10.435096)

[node name="Door2" parent="C1A0" unique_id=1685595773 instance=ExtResource("6_pe3st")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.844818, 4.1663184, 18.632954)

[node name="Door3" parent="C1A0" unique_id=1224330181 instance=ExtResource("6_pe3st")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.852488, 3.5780182, -9.567777)

[node name="GBJ Teleport Trigger" type="Area3D" parent="." unique_id=2117766873]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48.055878, -150.78465, -3.5050173)
script = ExtResource("3_s03oy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GBJ Teleport Trigger" unique_id=1288154854]
shape = SubResource("BoxShape3D_r26ln")

[node name="Sprite3D" type="Sprite3D" parent="GBJ Teleport Trigger" unique_id=832579623]
pixel_size = 0.02
billboard = 1
alpha_scissor_threshold = 0.484
texture = ExtResource("4_7fnmf")

[node name="Spawn" type="Node3D" parent="." unique_id=917287883]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9184103, -2.1957545, 0.5974302)
script = ExtResource("5_jgvh2")

[node name="Door_Switch" type="Area3D" parent="." unique_id=1020892607]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0087261, -1.8915762, 3.2998955)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door_Switch" unique_id=850998561]
shape = SubResource("BoxShape3D_pe3st")

[node name="Transition_A" type="Node3D" parent="." unique_id=1978075015]

[node name="Starkron_Demo1 Teleport Trigger2" type="Area3D" parent="Transition_A" unique_id=500585790]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.592319, 1.7227771, -4.2871943)
script = ExtResource("3_s03oy")
LevelDef = "StarkronDemo1"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Transition_A/Starkron_Demo1 Teleport Trigger2" unique_id=1870762491]
shape = SubResource("BoxShape3D_7jbgc")

[node name="Sprite3D" type="Sprite3D" parent="Transition_A/Starkron_Demo1 Teleport Trigger2" unique_id=1505172165]
pixel_size = 0.02
billboard = 1
alpha_scissor_threshold = 0.484
texture = ExtResource("4_7fnmf")

[node name="Timer" type="Timer" parent="Transition_A/Starkron_Demo1 Teleport Trigger2" unique_id=1016992464]
wait_time = 4.0
one_shot = true
script = ExtResource("7_jgvh2")

[node name="World" type="StaticBody3D" parent="Transition_A" unique_id=1912709953]

[node name="Hl1C1a0TransitionC0a0e003" type="MeshInstance3D" parent="Transition_A/World" unique_id=1434661521]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 11.209, -0.713, 0.729)
mesh = ExtResource("7_7fnmf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Transition_A/World" unique_id=772107925]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 11.209, -0.713, 0.729)
shape = ExtResource("8_jgvh2")

[node name="DoorIn" parent="Transition_A" unique_id=1357455180 instance=ExtResource("9_pe3st")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -1.6, 0.7)

[node name="DoorOut" parent="Transition_A" unique_id=510642858 instance=ExtResource("9_pe3st")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.25, -1.6, 0.7)

[node name="Area3D" type="Area3D" parent="Transition_A" unique_id=847337447]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.225634, -1.461638, 0.76281285)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Transition_A/Area3D" unique_id=733247452]
shape = SubResource("BoxShape3D_t7t8s")

[node name="Goomba" parent="." unique_id=1214246322 instance=ExtResource("11_pe3st")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.824566, -2.4346805, 5.631674)

[connection signal="body_shape_entered" from="C1A0/GridMapTest Teleport Trigger" to="C1A0/GridMapTest Teleport Trigger" method="MapChange" unbinds=2 binds= ["GridMapTest"]]
[connection signal="body_shape_entered" from="C1A0/OOB Trigger" to="Spawn" method="Respawn" unbinds=4]
[connection signal="body_shape_entered" from="GBJ Teleport Trigger" to="GBJ Teleport Trigger" method="MapChange" unbinds=2 binds= ["gbj"]]
[connection signal="body_shape_entered" from="Door_Switch" to="Transition_A/DoorIn" method="trigger"]
[connection signal="timeout" from="Transition_A/Starkron_Demo1 Teleport Trigger2/Timer" to="Transition_A/Starkron_Demo1 Teleport Trigger2" method="MapChange2"]
[connection signal="body_shape_entered" from="Transition_A/Area3D" to="Transition_A/Starkron_Demo1 Teleport Trigger2/Timer" method="start_player"]
[connection signal="body_shape_entered" from="Transition_A/Area3D" to="Transition_A/DoorIn" method="trigger"]
