[gd_scene format=3 uid="uid://xwm1wyqw5vv3"]

[ext_resource type="ArrayMesh" uid="uid://dpli03efdjyqh" path="res://assets/models/Starkron/block_out_v4.res" id="1_h7adf"]
[ext_resource type="Script" uid="uid://dssbc5hbjreg6" path="res://entities/Spawn.gd" id="2_cmqfk"]
[ext_resource type="Shape3D" uid="uid://3d8of500lp84" path="res://assets/models/Starkron/block_out_v4_collider.shape" id="2_ymd38"]
[ext_resource type="Material" uid="uid://bmcuaiimjayw2" path="res://assets/materials/starkron/checkard Test orange.tres" id="3_ymd38"]
[ext_resource type="Script" uid="uid://cwfle0lloje08" path="res://entities/LoadLevel.gd" id="5_u8kvw"]
[ext_resource type="Texture2D" uid="uid://bb0e64vof5t2o" path="res://assets/sprites/dbg_portal.png" id="6_qsut8"]
[ext_resource type="ArrayMesh" uid="uid://27csfhwo3bx1" path="res://assets/models/hl1_c1a0_transition_C0A0E_003.res" id="7_6jtjt"]
[ext_resource type="Script" uid="uid://8vx54lrm46k4" path="res://entities/timer_player.gd" id="7_qsut8"]
[ext_resource type="Shape3D" uid="uid://esn36byd2ed" path="res://assets/models/C1A0_Transition_collision.res" id="8_jabkh"]
[ext_resource type="PackedScene" uid="uid://df2amvnuqjmfl" path="res://prefabs/c1a0_door_large.tscn" id="9_ds621"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ymd38"]

[sub_resource type="Sky" id="Sky_3e7qf"]
sky_material = SubResource("ProceduralSkyMaterial_ymd38")

[sub_resource type="Environment" id="Environment_tgcle"]
background_mode = 2
sky = SubResource("Sky_3e7qf")

[sub_resource type="BoxShape3D" id="BoxShape3D_axtdh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y28rc"]
size = Vector3(1, 3.5, 5)

[node name="Node3D" type="Node3D" unique_id=161666672]

[node name="StaticBody3D" type="StaticBody3D" parent="." unique_id=1747992459]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D" unique_id=540520251]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 100, 0, 100)
mesh = ExtResource("1_h7adf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" unique_id=1361865713]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 100, 0, 100)
shape = ExtResource("2_ymd38")

[node name="CSGBox3D" type="CSGBox3D" parent="." unique_id=51383646]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -5, 0)
use_collision = true
size = Vector3(200, 1, 200)
material = ExtResource("3_ymd38")

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D" unique_id=294765255]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0536805, 0.22836867, 0)
operation = 2
size = Vector3(1.4390564, 0.5007373, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGBox3D" unique_id=172935910]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9159523, 0.13785231, 0.0730896)
operation = 2
size = Vector3(0.2874873, 0.3197046, 0.39898682)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGBox3D" unique_id=589150830]
transform = Transform3D(0.92387956, -0.3826835, 0, 0.3826835, 0.92387956, 0, 0, 0, 1, 2.7545173, 0.43896228, 0.07300001)
operation = 2
size = Vector3(1.6371758, 0.32, 0.399)

[node name="Spawn" type="Node3D" parent="." unique_id=59475480]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_cmqfk")
is_offset = true
offset = Vector3(0, -2, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1011247846]
transform = Transform3D(0.9085947, -0.27877787, 0.31102836, -0.12767535, 0.523641, 0.8423177, -0.3976866, -0.8050361, 0.44018432, 0, 10.177189, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1589594522]
environment = SubResource("Environment_tgcle")

[node name="Transition_A" type="Node3D" parent="." unique_id=1906177776]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)

[node name="hl1_c1a0 Teleport Trigger2" type="Area3D" parent="Transition_A" unique_id=1802234119]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.592319, -1.394836, -3.7078624)
script = ExtResource("5_u8kvw")
LevelDef = "hl1_c1a0"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Transition_A/hl1_c1a0 Teleport Trigger2" unique_id=1318645203]
shape = SubResource("BoxShape3D_axtdh")

[node name="Sprite3D" type="Sprite3D" parent="Transition_A/hl1_c1a0 Teleport Trigger2" unique_id=1274033517]
pixel_size = 0.02
billboard = 1
alpha_scissor_threshold = 0.484
texture = ExtResource("6_qsut8")

[node name="Timer" type="Timer" parent="Transition_A/hl1_c1a0 Teleport Trigger2" unique_id=2137720942]
wait_time = 4.0
one_shot = true
script = ExtResource("7_qsut8")

[node name="World" type="StaticBody3D" parent="Transition_A" unique_id=12547573]

[node name="Hl1C1a0TransitionC0a0e003" type="MeshInstance3D" parent="Transition_A/World" unique_id=2006654454]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 11.209, -0.713, 0.729)
mesh = ExtResource("7_6jtjt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Transition_A/World" unique_id=2058743964]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 11.209, -0.713, 0.729)
shape = ExtResource("8_jabkh")

[node name="DoorIn" parent="Transition_A" unique_id=1357455180 instance=ExtResource("9_ds621")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -1.6, 0.7)

[node name="DoorOut" parent="Transition_A" unique_id=2034007918 instance=ExtResource("9_ds621")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.25, -1.6, 0.7)
state = true

[node name="Area3D" type="Area3D" parent="Transition_A" unique_id=746520221]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.602395, -1.461638, 0.76281285)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Transition_A/Area3D" unique_id=12220162]
shape = SubResource("BoxShape3D_y28rc")

[node name="Timer" type="Timer" parent="Transition_A" unique_id=775326709]
one_shot = true

[connection signal="on_spawn" from="Spawn" to="Transition_A/Timer" method="start"]
[connection signal="timeout" from="Transition_A/hl1_c1a0 Teleport Trigger2/Timer" to="Transition_A/hl1_c1a0 Teleport Trigger2" method="MapChange2"]
[connection signal="body_shape_entered" from="Transition_A/Area3D" to="Transition_A/hl1_c1a0 Teleport Trigger2/Timer" method="start_player"]
[connection signal="body_shape_entered" from="Transition_A/Area3D" to="Transition_A/DoorOut" method="trigger"]
[connection signal="timeout" from="Transition_A/Timer" to="Transition_A/DoorOut" method="trigger" binds= [false, NodePath("/root/Player")]]
